--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="no_images_yet">No Image Yet!</string>
     <string name="photo_deleted_toast">Photo Deleted Successfully</string>
     <string name="send_to">Share Photo With:</string>
+    <string name="photo_edited_saved_message">Photo Saved to Pictures Folder</string>
 </resources>
