--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="share_photo_content_description">Share Photo</string>
     <string name="timer_counter_content_description">Timer Counter</string>
     <string name="appwidget_content_description">Edit Photo Sho Camera</string>
+    <string name="appwidget_content_description_last_image">View Last Taken Image</string>
 </resources>
